# whatsthisbox

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
whatsthisbox/: main.py  network.py  system.py
