[metadata]
name = whatsthisbox
version = 0.1.0
description = A lightweight Python CLI tool for viewing local IP addresses and system resource usage
author = GreenTree00
author_email = noemail@email.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    psutil>=7

[options.entry_points]
console_scripts =
    whatsthisbox = whatsthisbox.main:main
